--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -31,6 +31,7 @@ dependencies:
   flutter:
     sdk: flutter
   shared_preferences: ^2.0.8
+  http: ^0.13.3
 
 
   # The following adds the Cupertino Icons font to your application.
@@ -41,6 +42,7 @@ dev_dependencies:
   flutter_test:
     sdk: flutter
   shared_preferences: ^2.0.8
+  http: ^0.13.3
 
   # The "flutter_lints" package below contains a set of recommended lints to
   # encourage good coding practices. The lint set provided by the package is
